<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>top.wsxq2</groupId>
    <artifactId>DockerM</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>11.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>11.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>11.0.1</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.5</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.3</version>
        </dependency>
        <!--        <dependency>-->
        <!--            <groupId>ch.qos.logback</groupId>-->
        <!--            <artifactId>logback-core</artifactId>-->
        <!--            <version>1.3.0-alpha5</version>-->
        <!--        </dependency>-->
        <!--  Gson: Java to Json conversion -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.8.6</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-junit</artifactId>
            <version>4.0.16-alpha</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-core</artifactId>
            <version>4.0.16-alpha</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <version>2.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>net.jcip</groupId>
            <artifactId>jcip-annotations</artifactId>
            <version>1.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.4</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.6</version>
        </dependency>
        <dependency>
            <groupId>de.sstoehr</groupId>
            <artifactId>har-reader</artifactId>
            <version>2.1.7</version>
        </dependency>

    </dependencies>
    <build>
        <resources>
            <resource>
                <directory>
                    C:\Users\wsxq2\Documents\MY\workspace\da_si_xia\bysj\DockerM\src\main\java\top\wsxq2\dockerm\controller
                </directory>
            </resource>
            <resource>
                <directory>
                    C:\Users\wsxq2\Documents\MY\workspace\da_si_xia\bysj\DockerM\src\main\resources
                </directory>
            </resource>
        </resources>

        <testResources>
            <testResource>
                <directory>
                    C:\Users\wsxq2\Documents\MY\workspace\da_si_xia\bysj\DockerM\src\main\java\top\wsxq2\dockerm\controller
                </directory>
            </testResource>
        </testResources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>11</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.4</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <release>11</release>
                    <!--                    <compilerArgs>-->
                    <!--                        <arg>&#45;&#45;add-exports</arg>-->
                    <!--                        <arg>javafx.graphics/javafx.scene=org.controlsfx.controls</arg>-->
                    <!--                    </compilerArgs>-->
                    <options>
                        <option>--add-opens</option>
                        <option>javafx.graphics/javafx.scene=org.controlsfx.controls</option>
                    </options>
                    <mainClass>top.wsxq2.dockerm.MainApp</mainClass>
                </configuration>
                <executions>
                    <execution>
                        <!-- Default configuration for running -->
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>top.wsxq2.dockerm.MainApp</mainClass>
                        </configuration>
                    </execution>
                    <execution>
                        <!-- Configuration for debugging -->
                        <id>debug</id>
                        <configuration>
                            <options>
                                <option>--add-opens</option>
                                <option>javafx.graphics/javafx.scene=org.controlsfx.controls</option>
                                <option>--add-exports</option>
                                <option>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</option>
                                <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:8000</option>
                            </options>
                            <mainClass>top.wsxq2.dockerm.MainApp</mainClass>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jsonschema2pojo</groupId>
                <artifactId>jsonschema2pojo-maven-plugin</artifactId>
                <version>1.0.2</version>
                <configuration>
                    <sourceDirectory>${basedir}/src/main/resources/schema</sourceDirectory>
                    <targetPackage>top.wsxq2.dockerm.model.docker</targetPackage>
                    <annotationStyle>gson</annotationStyle>
                    <sourceType>json</sourceType>
                    <targetLanguage>java</targetLanguage>
                    <usePrimitives>false</usePrimitives>
                    <useDoubleNumbers>true</useDoubleNumbers>
                    <!--                    <useCommonsLang3>true</useCommonsLang3>-->
                    <includeGetters>true</includeGetters>
                    <includeSetters>false</includeSetters>
                    <includeHashcodeAndEquals>false</includeHashcodeAndEquals>
                    <includeToString>true</includeToString>
                    <includeAdditionalProperties>true</includeAdditionalProperties>
                    <includeConstructors>true</includeConstructors>
                    <addCompileSourceRoot>false</addCompileSourceRoot>
                    <excludes>get.sh,bak/</excludes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>